fixed swagger paths
